# h26forge

./: .gitignore  Cargo.toml  LICENSE.md  README.md  RELEASE.md  default.json  make.bat  make.sh
.github/workflows/: build.yml
config/: chrome.json  default.json  mvc.json  narrower.json
docs/: CONTRIBUTING.md  EDITING.md  GENERATION.md  GETTINGSTARTED.md  H264TYPES.md  MOTIVATION.md  STREAMING.md
input_vids/: SPS_PPS_I_P.264  SPS_PPS_SPS_I_P.264
minimp4.rs/: .gitmodules  Cargo.toml  README.md
minimp4.rs/minimp4-sys/: Cargo.toml  README.md  build.rs  main.c  minimp4.c  minimp4.h  minimp4.h_backup
minimp4.rs/src/: lib.rs  main.rs
rtp_config/: replay.config
scripts/: .gitignore  download_and_run_avcv1_test_vectors.sh  end-to-end-tester.py  gen_100_chrome_videos.bat  gen_100_chrome_videos.sh  gen_100_h265_videos.sh  gen_100_mvc_videos.bat  gen_100_videos.bat  gen_100_videos.sh  play_videos.html
src/: lib.rs  main.rs
src/common/: cabac_tables.rs  cavlc_tables.rs  data_structures.rs  helper.rs  mod.rs
src/decoder/: binarization_functions.rs  cabac.rs  cavlc.rs  decoder.rs  expgolomb.rs  macroblock.rs  mod.rs  nalu.rs  parameter_sets.rs  rtp.rs  sei.rs  slice.rs
src/encoder/: avcc.rs  binarization_functions.rs  cabac.rs  cavlc.rs  encoder.rs  expgolomb.rs  macroblock.rs  mod.rs  mp4.rs  nalu.rs  parameter_sets.rs  rtp.rs  safestart.rs  sei.rs  slice.rs
src/experimental/: h265_data_structures.rs  h265_decoder.rs  h265_encoder.rs  h265_modify.rs  h265_randcode.rs  mod.rs
src/streaming/: mod.rs  webrtc.rs
src/vidgen/: film.rs  generate_configurations.rs  macroblock.rs  mod.rs  modify_video.rs  nalu.rs  parameter_sets.rs  rtp.rs  sei.rs  slice.rs  syntax_to_video.rs  vidgen.rs
transforms/: clear_out_frames.py  helpers.py  oob_num_ref_frames_in_pic_order_cnt_cycle.py  overflowing_qs_y.py  slice_0_all_blue.py  slice_all_pcm.py  slice_all_remove_residue.py  slice_n_remove_residue.py
transforms/datamoshing/: duplicate_all_p_frames.py  duplicate_all_p_frames_ignore_poc_n_frame.py  remove_all_but_first_i_frame.py  remove_all_but_first_i_frame_ignore_poc_n_frame_num.py  remove_every_other_i_frame.py
transforms/luma_chroma_thief/: horizontal_luma_chroma_thief_16x16.py  horizontal_luma_chroma_thief_4x4.py  horizontal_luma_chroma_thief_8x8.py  vertical_luma_chroma_thief_16x16.py  vertical_luma_chroma_thief_4x4.py  vertical_luma_chroma_thief_8x8.py
transforms/paper_pocs/: README.md  cve_2022_22675.py  decreasing_framesize.py  emulation_prevention_bytes.py  idr_b_slice.py  idr_p_slice.py  large_fmo.py  oob_first_mb_in_slice.py  (+1 more)
(+6 files in other folders)
